Pending changes in the mainline
===============================

Maintenance
-----------

* Upgraded dependencies for static builds:
  - dcmtk 3.6.8


Version 1.12.2 (2023-12-19)
===========================

General
-------

* Performance:
  - Allow multiple plugins to use the plugin SDK at the same time.  In previous versions,
    functions like instance transcoding or instance reading where mutually exclusive.
    This can bring some significant improvements, especially in viewers.
  - Optimized the StorageCache to prevent loading the same file multiple times if
    multiple users request the same file at the same time.
  - The StorageCache is now also storing transcoded instances that have been requested by /file?transcode=...
    that is now used by the DICOMweb plugin.  This speeds up retrieval of transcoded frames through WADO-RS.
  - Now displaying timings when reading from/writing to disk in the verbose logs.
* HTTP compression:
  - The default value of the "HttpCompressionEnabled" is now false by default.  This reduces
    the Orthanc overall CPU usage and latency.  This is suitable for setups with large  
    bandwidth network like LAN.
  - When "HttpCompressionEnabled" is true, only the content that is clearly identified as
    compressible is compressed (JSON, XML, HTML, text, ...).  DICOM files are never
    compressed over HTTP.  In prior versions, all content types were compressed.
    This notably greatly improves loading time of large DICOM 
    files through WADO-RS e.g in StoneViewer when working on large bandwidth networks.
  - When "HttpCompressionEnabled" is true, content < 2KB are never compressed.
* Logs:
  - Each line of log now contains the name of the thread that is logging the message.
    A new "--logs-no-thread" command line option can be used to get back to the previous behavior to
    keep backward compatibility.

REST API
--------

* API version upgraded to 22
* Added a route to delete completed jobs from history: DELETE /jobs/{id}