@@ -1,6 +1,12 @@
 Pending changes in the mainline
 ===============================
 
+REST API
+--------
+
+* API version upgraded to 23
+* Added a 'KeepLabels' option in /modify routes (default = false)
+
 Maintenance
 -----------
 
